--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,15 +1,9 @@
-/* Global baseline styles */
-html, body, #root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+@import "tailwindcss";
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #111;
+@theme {
+  --color-white: #FCFCFC;
+  --color-lime-cream: #D2F898;
+  --color-yellow: #F6F930;
+  --color-graphite: #2F2F2F;
+  --color-black: #000000;
 }
